--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,7 +17,19 @@
       </div>
       <div class="title">Roshan's Portfolio Terminal</div>
     </div>
-    <div id="output" class="terminal-output"></div>
+    <div id="output" class="terminal-output">
+<pre>                                      
+       ____   ___  ____  _   _    _    _   _     __  
+      |  _ \ / _ \/ ___|| | | |  / \  | \ | |    \ \ 
+ _____| |_) | | | \___ \| |_| | / _ \ |  \| |_____\ \
+|_____|  _ <| |_| |___) |  _  |/ ___ \| |\  |_____/ /
+      |_| \_\\___/|____/|_| |_/_/   \_|_| \_|    /_/ 
+                                                     
+
+👋 Welcome to Roshan Tigga’s Terminal Portfolio
+Type "help" to see available commands.
+</pre>
+    </div>
     <div class="terminal-input-line">
       <span class="prompt">➜</span>
       <span class="path">~/portfolio</span>
@@ -28,3 +41,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
